Incorporación de firebase

--- a/src/views/Sobremi.css
+++ b/src/views/Sobremi.css
@@ -1,5 +1,5 @@
 .fondo {
-    background-image: url("../img/img-proyect/fondo-a.png");
+    background-image: url("https://firebasestorage.googleapis.com/v0/b/pryectofotos.appspot.com/o/documentos%2Ffondo-a.png?alt=media&token=a3b6e280-4229-4b65-9bdb-95cf7ecb5083");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
